# world2village

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/agents/: village-builder.md  village-coder.md  village-git.md  village-packages.md  village-security.md
crates/village-core/: Cargo.toml
crates/village-core/src/: argv.rs  config.rs  invite.rs  lib.rs  mac.rs  profile.rs
crates/village-ipc/: Cargo.toml
crates/village-ipc/src/: frame.rs  protocol.rs
crates/village-service/: Cargo.toml
crates/village-service/src/: acl.rs  dispatch.rs  install.rs  job.rs  logging.rs  main.rs  pipe.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  dto.rs  elevate.rs  ipc_client.rs  main.rs  state.rs
ui/: api.js  app.js  index.html  styles.css
ui/views/: advanced-host.js  connect-status.js  server-list.js
