[package]
name = "village-tauri"
version = "0.1.0"
edition.workspace = true

# Windows/GTK-only: this is the Tauri v2 desktop app shell (the unelevated
# GUI process). On Linux it requires libgtk-3-dev/libwebkit2gtk-4.1-dev (or
# equivalent) to even compile -- `tauri`'s `wry`/`tao` dependencies link
# against them -- which this sandbox does not have. See the top-level
# Cargo.toml for why this crate is a `members` entry but not a
# `default-members` entry, and CLAUDE.md for the overall architecture.
#
# `village-tauri` talks to `village-service` (the SYSTEM-elevated Windows
# Service) exclusively over the named pipe defined in
# `crates/village-ipc/src/protocol.rs` -- it never spawns `edge.exe`
# directly and never needs elevation itself, aside from the one-time
# `ensure_service_installed` UAC prompt (see `src/elevate.rs`).

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
thiserror = "2.0.18"
village-core = { path = "../crates/village-core" }
village-ipc = { path = "../crates/village-ipc" }

# `ShellExecuteW` (used by `elevate.rs` to trigger the one-time UAC prompt
# for installing the Windows Service) is Windows-only; gating the
# dependency itself to `cfg(windows)` means a non-Windows `cargo metadata`/
# dependency resolution doesn't even need to fetch it.
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
