[package]
name = "village-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
base64 = "0.22.1"
crc32fast = "1.5.0"
directories = "6.0.0"
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.27.0"
